In index.html, change the both custom checkbox svg's fill to transparent. Complete the css styling of the app.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Todo App</h1>
     <!-- This is will make website responsive -->
     <div class="wrapper">
+
       <form action="">
         <input
           id="todo-input"
@@ -17,9 +18,11 @@
           placeholder="write task and hit enter to add"
           autocomplete="off"
         />
-        <button id="add-button">ADD</button>
+        <button id="ad-button">ADD</button>
       </form>
+      
       <ul id="todo-list">
+
         <li class="todo">
           <input type="checkbox" id="todo-1" />
           <label class="custom-checkbox" for="todo-1">
@@ -28,7 +31,7 @@
               height="24px"
               viewBox="0 -960 960 960"
               width="24px"
-              fill="#5f6368"
+              fill="transparent"
             >
               <path d="M382-240 154-468l57-57 171 171 367-367 57 57-424 424Z" />
             </svg>
@@ -59,7 +62,7 @@
               height="24px"
               viewBox="0 -960 960 960"
               width="24px"
-              fill="#5f6368"
+              fill="transparent"
             >
               <path d="M382-240 154-468l57-57 171 171 367-367 57 57-424 424Z" />
             </svg>
