--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       
       <ul id="todo-list">
 
-        <li class="todo">
+        <!-- <li class="todo">
           <input type="checkbox" id="todo-1" />
           <label class="custom-checkbox" for="todo-1">
             <svg
@@ -84,7 +84,7 @@
               />
             </svg>
           </button>
-        </li>
+        </li> -->
       </ul>
     </div>
   </body>
